// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvisorsOfDegree renders other advisors 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Advisors: 
    </span>
    <ul>
      <li>
        <a
          href="/authors?q=Yoda"
        >
          Yoda
        </a>
        , 
      </li>
      <li>
        <a
          href="/authors?q=Another%20Dude"
        >
          Another Dude
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`AdvisorsOfDegree renders phd advisors 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      PhD Advisors: 
    </span>
    <ul>
      <li>
        <a
          href="/authors?q=Yoda"
        >
          Yoda
        </a>
        , 
      </li>
      <li>
        <a
          href="/authors?q=Another%20Dude"
        >
          Another Dude
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`AdvisorsOfDegree renders the master advisor 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Master Advisor: 
    </span>
    <ul>
      <li>
        <a
          href="/authors?q=Yoda"
        >
          Yoda
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
